# backend/lib/webserver/NoCloudRouter.js
@@ -3,6 +3,7 @@ const fs = require("fs");
 const nestedProperty = require("nested-property");
 const RateLimit = require("express-rate-limit");
 
+const capabilities = require("../core/capabilities");
 const Logger = require("../Logger");
 const Tools = require("../utils/Tools");
 const {SSEHub, SSEMiddleware} = require("./middlewares/sse");
@@ -185,6 +186,31 @@ class NoCloudRouter {
                 const NoCloudConfig = this.config.get("NoCloud");
                 NoCloudConfig.customizations.friendlyName = req.body.friendlyName;
                 this.config.set("NoCloud", NoCloudConfig);
+
+                res.sendStatus(200);
+            } else {
+                res.sendStatus(400);
+            }
+        });
+
+        this.router.get("/config/duststreaming", (req, res) => {
+            res.json(this.config.get("duststreaming"));
+        });
+
+        this.router.put("/config/duststreaming", this.validator, async (req, res) => {
+            if (typeof req.body.enabled === "boolean") {
+                this.config.set(
+                    "duststreaming",
+                    Object.assign({}, this.config.get("duststreaming"), {enabled: req.body.enabled})
+                );
+
+                if (req.body.enabled === false) {
+                    const capability = this.robot.capabilities[capabilities.DuststreamingCapability.TYPE];
+
+                    if (capability) {
+                        await capability.selfDestruct();
+                    }
+                }
 
                 res.sendStatus(200);
             } else {
